--- a/requirements.in
+++ b/requirements.in
@@ -23,7 +23,9 @@ pyglet==1.5.27
 setuptools==65.5.0
 wheel==0.38.4
 pygit2
-ipykernel
+ipykernel>=6.29.5
+# Need tornado>=6.4.2 to avoid https://nvd.nist.gov/vuln/detail/CVE-2024-52804
+tornado>=6.4.2
 nbformat
 pre-commit
 black>=24.3.0
