--- a/requirements.txt
+++ b/requirements.txt
@@ -4,97 +4,97 @@
 #
 #    pip-compile requirements.in
 #
-asttokens==2.4.1
+asttokens==3.0.0
     # via stack-data
-attrs==23.2.0
+attrs==24.3.0
     # via
     #   jsonschema
     #   referencing
-black==24.4.2
+black==24.10.0
     # via -r requirements.in
-build==1.1.1
+build==1.2.2.post1
     # via pip-tools
-cffi==1.16.0
+cffi==1.17.1
     # via pygit2
 cfgv==3.4.0
     # via pre-commit
-click==8.1.7
+click==8.1.8
     # via
     #   black
     #   pip-tools
-cloudpickle==3.0.0
+cloudpickle==3.1.0
     # via gym
-cmake==3.28.3
+cmake==3.31.4
     # via -r requirements.in
 colorama==0.4.6
     # via
     #   build
     #   click
     #   ipython
-comm==0.2.1
+comm==0.2.2
     # via ipykernel
-contourpy==1.2.0
+contourpy==1.3.1
     # via matplotlib
 cycler==0.12.1
     # via matplotlib
-debugpy==1.8.1
+debugpy==1.8.11
     # via ipykernel
 decorator==5.1.1
     # via ipython
-distlib==0.3.8
+distlib==0.3.9
     # via virtualenv
-executing==2.0.1
+executing==2.1.0
     # via stack-data
-fastjsonschema==2.19.1
+fastjsonschema==2.21.1
     # via nbformat
-filelock==3.13.1
+filelock==3.16.1
     # via virtualenv
-fonttools==4.49.0
+fonttools==4.55.3
     # via matplotlib
 gym==0.21.0
     # via -r requirements.in
-identify==2.5.35
+identify==2.6.5
     # via pre-commit
-ipykernel==6.29.3
+ipykernel==6.29.5
     # via -r requirements.in
-ipython==8.22.2
+ipython==8.31.0
     # via ipykernel
-jedi==0.19.1
+jedi==0.19.2
     # via ipython
-jsonschema==4.21.1
+jsonschema==4.23.0
     # via nbformat
-jsonschema-specifications==2023.12.1
+jsonschema-specifications==2024.10.1
     # via jsonschema
-jupyter-client==8.6.0
+jupyter-client==8.6.3
     # via ipykernel
-jupyter-core==5.7.1
+jupyter-core==5.7.2
     # via
     #   ipykernel
     #   jupyter-client
     #   nbformat
 keyboard==0.13.5
     # via -r requirements.in
-kiwisolver==1.4.5
+kiwisolver==1.4.8
     # via matplotlib
-matplotlib==3.8.3
+matplotlib==3.10.0
     # via -r requirements.in
-matplotlib-inline==0.1.6
+matplotlib-inline==0.1.7
     # via
     #   ipykernel
     #   ipython
-mypy==1.9.0
+mypy==1.14.1
     # via -r requirements.in
 mypy-extensions==1.0.0
     # via
     #   black
     #   mypy
-nbformat==5.9.2
+nbformat==5.10.4
     # via -r requirements.in
 nest-asyncio==1.6.0
     # via ipykernel
-nodeenv==1.8.0
+nodeenv==1.9.1
     # via pre-commit
-numpy==1.26.4
+numpy==2.2.1
     # via
     #   -r requirements.in
     #   contourpy
@@ -105,63 +105,63 @@ numpy==1.26.4
     #   pyqtgraph
     #   qdldl
     #   scipy
-osqp==0.6.5
+osqp==0.6.7.post3
     # via -r requirements.in
-packaging==24.0
+packaging==24.2
     # via
     #   black
     #   build
     #   ipykernel
     #   matplotlib
     #   plotly
-pandas==2.2.1
+pandas==2.2.3
     # via -r requirements.in
-parso==0.8.3
+parso==0.8.4
     # via jedi
 pathspec==0.12.1
     # via black
-pillow==10.3.0
+pillow==11.1.0
     # via
     #   -r requirements.in
     #   matplotlib
 pip-tools==7.4.1
     # via -r requirements.in
-platformdirs==4.2.0
+platformdirs==4.3.6
     # via
     #   black
     #   jupyter-core
     #   virtualenv
-plotly==5.19.0
+plotly==5.24.1
     # via -r requirements.in
-pre-commit==3.6.2
+pre-commit==4.0.1
     # via -r requirements.in
-prompt-toolkit==3.0.43
+prompt-toolkit==3.0.48
     # via ipython
-psutil==5.9.8
+psutil==6.1.1
     # via ipykernel
-pure-eval==0.2.2
+pure-eval==0.2.3
     # via stack-data
-pycparser==2.21
+pycparser==2.22
     # via cffi
-pygit2==1.14.1
+pygit2==1.17.0
     # via -r requirements.in
 pyglet==1.5.27
     # via -r requirements.in
-pygments==2.17.2
+pygments==2.19.1
     # via ipython
-pyparsing==3.1.2
+pyparsing==3.2.1
     # via matplotlib
-pyproject-hooks==1.0.0
+pyproject-hooks==1.2.0
     # via
     #   build
     #   pip-tools
-pyqt5==5.15.10
+pyqt5==5.15.11
     # via -r requirements.in
 pyqt5-qt5==5.15.2
     # via pyqt5
-pyqt5-sip==12.13.0
+pyqt5-sip==12.16.1
     # via pyqt5
-pyqtgraph==0.13.4
+pyqtgraph==0.13.7
     # via -r requirements.in
 pyserial==3.5
     # via -r requirements.in
@@ -170,50 +170,49 @@ python-dateutil==2.9.0.post0
     #   jupyter-client
     #   matplotlib
     #   pandas
-pytz==2024.1
+pytz==2024.2
     # via pandas
-pywin32==306
+pywin32==308
     # via jupyter-core
-pyyaml==6.0.1
+pyyaml==6.0.2
     # via pre-commit
-pyzmq==25.1.2
+pyzmq==26.2.0
     # via
     #   ipykernel
     #   jupyter-client
-qdldl==0.1.7.post0
+qdldl==0.1.7.post5
     # via osqp
-referencing==0.33.0
+referencing==0.35.1
     # via
     #   jsonschema
     #   jsonschema-specifications
-rpds-py==0.18.0
+rpds-py==0.22.3
     # via
     #   jsonschema
     #   referencing
 ruamel-yaml==0.17.40
     # via -r requirements.in
-ruamel-yaml-clib==0.2.8
+ruamel-yaml-clib==0.2.12
     # via ruamel-yaml
-ruff==0.3.2
+ruff==0.9.1
     # via -r requirements.in
-scipy==1.11.4
+scipy==1.15.1
     # via
     #   -r requirements.in
     #   osqp
     #   qdldl
-six==1.16.0
-    # via
-    #   asttokens
-    #   python-dateutil
+six==1.17.0
+    # via python-dateutil
 stack-data==0.6.3
     # via ipython
-tenacity==8.2.3
+tenacity==9.0.0
     # via plotly
-tornado==6.4
+tornado==6.4.2
     # via
+    #   -r requirements.in
     #   ipykernel
     #   jupyter-client
-traitlets==5.14.1
+traitlets==5.14.3
     # via
     #   comm
     #   ipykernel
@@ -222,11 +221,13 @@ traitlets==5.14.1
     #   jupyter-core
     #   matplotlib-inline
     #   nbformat
-typing-extensions==4.10.0
-    # via mypy
-tzdata==2024.1
+typing-extensions==4.12.2
+    # via
+    #   ipython
+    #   mypy
+tzdata==2024.2
     # via pandas
-virtualenv==20.25.1
+virtualenv==20.28.1
     # via pre-commit
 wcwidth==0.2.13
     # via prompt-toolkit
